Initial commit after setting .ignore.
project is ready to work and a test model is added to boostertechapp to
check if migrations are ignored or not.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ boostertech_backend/urls.py
 # Node artifact files
 node_modules/
 dist/
+*.pyc
+boostertech_backend/
+boostertech_backend/**/*.pyc
 
 # Compiled Java class files
 *.class
@@ -72,3 +75,4 @@ Thumbs.db
 *.mov
 *.wmv
 
+db.sqlite3
