Initial changes Done
Project setup complete accrding to lead(Mr Mohsin) and some important
varables added to .env. So be sure to have .env in your project
directory and paste variables from .env.example

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ boostertechapp/migrations
 **/migrations/*
 **/**/migrations
 mysql/
-boostertech_backend/settings.py
+boostertech_backend/.env
 boostertech_backend/urls.py
 .idea/
 # These are some examples of commonly ignored file patterns.
