--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ dist/
 *.pyc
 boostertech_backend/
 boostertech_backend/**/*.pyc
-
+boostertech_backend/__pycache__/*.pyc
 # Compiled Java class files
 *.class
 
