Forget passsword ready
Forget password module is ready and sending emails for users to reset
their password.

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ SECRET_KEY=add_your_seceret_key
 DATABASE_NAME=databasename
 DATABASE_USER=username
 DATABASE_PASSWORD=seceretpassword
+DB_HOST=localhost
+DB_PORT=5432
+EMAIL_HOST_USER = 'e8f28d51de606a'
