--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,7 @@ pipelines:
   default:
     - parallel:
       - step:
-          name: Test
+          name: Test Cases
           caches:
             - pip
           script:
