--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ node_modules/
 dist/
 *.pyc
 mediafiles
+staticfiles
 boostertech_backend/
 boostertech_backend/**/*.pyc
 boostertech_backend/__pycache__/*.pyc
