--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,7 @@ pipelines:
           script:
             - if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
             - pip install pytest
-          #  - python -m pytest -v tests/ --junitxml=test-reports/report.xml
+            - python -m pytest -v tests/ --junitxml=test-reports/report.xml
       - step:
           name: Lint code
           script:
